adding spotless.gradle and prettier

--- a/multi/build.gradle
+++ b/multi/build.gradle
@@ -1,38 +1,28 @@
 buildscript {
-	repositories {
-		mavenCentral()
-	}
+    repositories {
+        mavenCentral()
+    }
 }
 
 plugins {
-	id 'groovy'
-	id "com.diffplug.spotless" version "6.11.0"
+    id 'java'
+    id 'groovy'
+    id "com.diffplug.spotless" version "6.11.0"
 }
 
-//  this needs to be here to make it work...
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+apply from: 'spotless.gradle'
 
-spotless {
-	java {
-		googleJavaFormat()
-		indentWithSpaces()
-		trimTrailingWhitespace()
-	}
-	groovy {
-		excludeJava()
-		greclipse()
-		indentWithSpaces()
-		trimTrailingWhitespace()
-	}
-	groovyGradle {
-		greclipse()
-		indentWithSpaces()
-	}
+allprojects {
+    apply plugin: 'java'
+
+    repositories {
+        mavenCentral()
+    }
+
+    group 'org.example'
+    version '1.0-SNAPSHOT'
 }
-
-
