--- a/multi/spotless/spotless.gradle
+++ b/multi/spotless/spotless.gradle
@@ -1,12 +1,12 @@
 spotless {
     java {
-        prettier(['prettier': '2.0.5', 'prettier-plugin-java': '0.8.0'])
-        .config([
-            'parser': 'java',
-            'tabWidth': 4,
-            'useTabs' : false,
-            'printWidth': 120
-        ])
+        prettier()
+                .config([
+                    'parser': 'java',
+                    'tabWidth': 4,
+                    'useTabs' : false,
+                    'printWidth': 120
+                ])
         trimTrailingWhitespace()
         removeUnusedImports()
         endWithNewline()
