--- a/multi/build.gradle
+++ b/multi/build.gradle
@@ -9,12 +9,15 @@ plugins {
     id 'groovy'
     id "com.diffplug.spotless" version "6.11.0"
 }
-apply from: 'spotless/predeclare.gradle'
 
 
 allprojects {
     group 'org.example'
     version '1.0-SNAPSHOT'
+
+    repositories {
+        mavenCentral()
+    }
 
     spotless {
         java {
